--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,27 @@ code {
 pre.src {
     line-height: normal;
 }
+
+/* for postamble, no border and gray text*/
+table.postamble {
+    border-top: hidden;
+    border-bottom: hidden;
+    color: gray;
+}
+table.postamble td {
+    line-height: 1.2;
+    padding: 0.2rem;
+}
+table.postamble a {
+    color: darkgray;
+}
+
+/* do not let LaTeX CSS compute TOC number */
+nav li:before {
+    content: none;
+}
+
+/* center figure caption */
+figcaption {
+    text-align: center;
+}
