Update from https://github.com/thebesttv/eserver-static/commit/5063557955925388e41c66c22392757553cad730

--- a/css/style.css
+++ b/css/style.css
@@ -77,8 +77,8 @@ figcaption {
     text-align: center;
 }
 
-/* use flexible layout for sitemap list entry, inspired by CSS style of:
-     https://blog.sunfishcode.online/ */
+/* use flexible layout for sitemap list entry, inspired by:
+     https://blog.sunfishcode.online/style.css */
 .sitemap-list li {
     /* align-items: center; */
     display: flex;
